tests/ui/struct_flatten.stderr
error: proc-macro derive panicked
  --> $DIR/struct_flatten.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: flatten is only allowed on fields
